# Muza

./: .env  .gitignore  .prettierrc  1.html  111.html  Cargo.toml  DB files.rar  LOGOMUZA2.xcf  ReadMe.txt  audio.html  create.html  error.html  generate.html  guest.html  index.html  mail.html  notTab.js  registration.html  script.js  scripts.js  style-guest.css  style-registration.css  styles.css  Документация БД.rar  Документация БД.xlsx  Описание столбцов БД.rar  ссылка на Документацию БД  фывм.docx
css/: audioPlayer.css  common.css  cookies.css  create.css  style-guest.css  style-registration.css
entity/: Cargo.toml
entity/src/: formatsheetmusic.rs  formattabs.rs  logins.rs  mod.rs  password_resets.rs  personalaccount.rs  prelude.rs  sheetmusic.rs  shellmusic.rs  tabs.rs  transposition.rs
scripts/: guest.js  registration.js  reset_password.js
scripts/cookies/: run-cookies.js
scripts/create-scripts/: INDEXSCRIPTOLD.js  decreaseTone.js  editNotes.js  generateNotesFromBlob.js  handleFileSelect.js  index.js  script.js
scripts/guest-script/: VideoSpeed.js
scripts/reg-script/: forgotPassword.js  registerForm.js  socialAuth.js  tabSwitcher.js  validTelNumberRegistration.js  validation.js
scripts/registration-script/: LoginGoogle.js  checkEmail.js  checkMailOrPhone.js  checkPass.js  checkPhone.js  forgotPass.js  handleInput.js  loginYa.js  maskPhoneLogin.js  maskPhoneRegistration.js  switchTabs.js  validLoginForm.js  validRegistrationForm.js
src/: main.rs
static/: .gitignore  aaaa.html  fonts.css  guest.html  index.html  registration.html
(+57 files in other folders)
